<resources>
    <string name="app_name">NewManager</string>
    <string name="database_info">Banco de Dados não Inicializado</string>
    <string name="version_info">Manager Mobile</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Escuro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_manager_mobile">Manager</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Fechar Menu</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Menu Cabeçalho</string>
    <string name="action_settings">Opções</string>

    <string name="text_vendas">Clientes</string>
    <string name="text_resumo">Resumo</string>
    <string name="text_consultas">Consultas</string>
    <string name="text_item_controle">Itens de Controle</string>
    <string name="text_tabela_preco">Tabela de Preços</string>
    <string name="text_acao_mercado">Ações de Mercado</string>
    <string name="text_pesquisa_ativa">Pesquisas Ativas</string>
    <string name="text_dados_aparelho">Dados do Aparelho</string>

    <string name="menu_home">Início</string>
    <string name="login">Login</string>
    <string name="menu_visit_list">Lista de Clientes</string>
    <string name="menu_register_user">Registro de Usuário</string>
    <string name="menu_supervisor">Supervisor</string>
    <string name="menu_registro_cliente">Cadastro de Clientes</string>
    <string name="menu_comunicacao">Comunicação</string>
    <string name="menu_dados">Banco de Dados</string>
    <string name="menu_settings">Configurações</string>

    <!-- Strings related to Communication -->
    <string name="download_button">Baixar</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Setor</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_up">Criar Usuario</string>
    <string name="welcome">"Bem Vindo"</string>
    <string name="invalid_username">Setor não encontrado</string>
    <string name="invalid_password">Senha deve conter mais de 5 Caracteres</string>
    <string name="login_failed">"Falha no login"</string>

    <string name="register_user_title">Information</string>
    <string name="text_nome_vendedor">Full Name</string>
    <string name="text_setor_vendedor">Id</string>
    <string name="text_senha_vendedor">Password</string>
    <string name="text_senha_confirm_vendedor">Confirm Password</string>
    <string name="button_register_user">Send</string>
    <string name="setor_text">Setor</string>
    <string name="database_not_found">Database not Found</string>
    <string name="title_activity_communication_screen">CommunicationScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_send">Send</string>
    <string name="title_recieve">Recieve</string>

    <string name="dialog_client_options">Client Options</string>
    <string name="client_options_sell">Sell</string>
    <string name="client_options_gauge_freezers">Gauge Freezers</string>
    <string name="client_options_get_location">Get Location</string>

    <string name="home_to_visit_args">USER</string>
    <string name="visit_to_pedidos_args">codigo_cliente</string>

    <string name="tab_title_items">Products</string>
    <string name="tab_title_resumo">Summary</string>
    <string name="tab_title_finalizacao">Terminate Order</string>

    <string name="menu_pedidos">Order</string>
    <string name="valor_total_a_pagar">Valor total a pagar</string>
</resources>