<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/mnuVendas"
            android:icon="@drawable/ic_clientes"
            android:title="@string/text_vendas" />
        <item
            android:id="@+id/mnuResumo"
            android:icon="@drawable/ic_resumo"
            android:title="@string/text_resumo"
            android:titleCondensed="@string/text_resumo" />
        <item
            android:id="@+id/mnuConsulta"
            android:icon="@drawable/ic_consulta"
            android:title="@string/text_consultas">
            <menu>
                <item
                    android:id="@+id/mnuIC"
                    android:title="@string/text_item_controle" />
                <item
                    android:id="@+id/mnuTabPreco"
                    android:title="@string/text_tabela_preco" />
                <item
                    android:id="@+id/mnuAcaoes"
                    android:title="@string/text_acao_mercado" />
                <item
                    android:id="@+id/mnuPesquisas"
                    android:title="@string/text_pesquisa_ativa" />
                <item
                    android:id="@+id/mnuPhone"
                    android:title="@string/text_dados_aparelho" />
            </menu>
        </item>
    </group>
</menu>