<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_client_registration"
            android:icon="@drawable/ic_round_person_add_24"
            android:title="@string/menu_registro_cliente" />
        <item
            android:id="@+id/nav_supervisor"
            android:icon="@drawable/ic_round_supervisor_account_24"
            android:title="@string/menu_supervisor" />
        <item
            android:id="@+id/nav_communication"
            android:icon="@drawable/ic_round_cloud_sync_24"
            android:title="@string/menu_comunicacao" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_database"
            android:title="@string/menu_dados" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>